--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ h1 {
     margin-right: 10px; /* Adjust spacing between heading and cards */
     font-size: 1.2rem;
     font-weight: bold;
-    color: #333;
+    color: #ffffff;
 }
 /* Header styles */
 header {
