--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
     --color-github: #24262a; /* GitHub Dark Gray */
     --color-github-hover: #979797; /* Lighter GitHub Gray on hover */
     --color-background: #FCF6F5FF; /* White */
-    --color-header-footer: rgb(127, 161, 179); /* Sapphire */
+    --color-header-footer: #7fa1b3; /* Sapphire */
     --color-text: rgb(0, 0, 0); /* Darker color for text */
     --color-text-dark: #6E8898FF; /* Light Slate Gray for text shadow on hover */
     --color-text-light: #d3d0cbff; /* American Silver */
